--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
   <section class="portrait-section"></section>
   
   <section class="presentation-section">
-  <div class="presentation-text">
+  
+  <div class="presentation-text1"> 
     <p>Micro-entreprise: ALP'AZUR Solutions</p>
-    <p>Consultant: René Weisbuch</p>
-    <p>Diplôme: ENSI Constructions Aeronautiques</p>
   </div>
-  <img src="Logo/ENSICA.jpg" alt="ENSICA">
+  <div class="presentation-text2">
+    <span class="consultant">Consultant: René Weisbuch</span>
+    <img src="Logo/ENSICA.jpg" alt="ENSICA">
+  </div>
+  <div class="presentation-text3">
+    <p>Diplôme: ENSI Constructions Aéronautiques</p>
+  </div>
   </section>
   
   <section class="motto-section">
@@ -37,11 +42,9 @@
   
   <section class="experience-section">
   <div class="experience-text">
-    <p>Systèmes Embarqués</p>
-    <img src="Logo/Systemes_Embarques.png" alt="Systemes Embarques">
-    <p>Technologie Radar</p>
-    <img src="Logo/Technologie_Radar.jpg" alt="Technologie Radar">
-    <p>Outils de développement</p>
+    <img src="Images/Systemes_embarques.png" alt="Systemes Embarques">
+    <img src="Images/Technologie_radar.png" alt="Technologie Radar">
+    <img src="Images/Outils_de_developpement.png" alt="Outils de Developpement">
   </div>
   </section>
   
@@ -50,7 +53,7 @@
     <p>- Solutions pour le développement et les tests de logiciels critiques</p>
     <p>- Intégration/R&D d'algorithmes Radar</p>
     <p>- Développement personnalisé d'outils logiciels: Dépouillement, automatisation...</p>
-    <p>- Expérience professionnelle de plus de 25 ans</p>
+    <p>- Expérience professionnelle internationale de plus de 25 ans</p>
     <p>- Aide pour le développement de tout type d'applications</p>
   </div>
   </section>
@@ -85,10 +88,10 @@
       position: absolute;
       left: 10px;   /* x */
       top: 0px;    /* y */
-      width: 100px;
-      height: 100px;
+      width: 300px;
+      height: 97px;
 
-      background-image: url("Logo/Logo_2.png");
+      background-image: url("Logo/Logo_simple_1.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -103,8 +106,8 @@
 
     .texte_titre {
       position: absolute;
-      left: 180px;  /* x */
-      top: 30px;   /* y */
+      left: 350px;  /* x */
+      top: 10px;   /* y */
       color: black;
       font-size: 32px;
       font-family: "Orbitron", sans-serif;
@@ -146,15 +149,30 @@
       width: 400px;
       height: 100px;
     }
-    .presentation-section img {
-      width: 50px;
-      margin-top: 110px;
-      margin-left: 100px;
+    .presentation-text2 img {
+      height: 30px;
     }
-    .presentation-text {
+    .presentation-text1 {
       position: absolute;
       color: black;
       font-size: 16px;
+      font-family: "Arial", sans-serif;
+    }
+    .presentation-text2 {
+      position: absolute;
+      color: black;
+      font-size: 16px;
+      top: 50px;
+      font-family: "Arial", sans-serif;
+      display: flex;
+      align-items: center;   /* alignement vertical */
+      gap: 40px;             /* espace texte / image */
+    }
+    .presentation-text3 {
+      position: absolute;
+      color: black;
+      font-size: 16px;
+      top: 80px;
       font-family: "Arial", sans-serif;
     }
     .motto-section {
@@ -186,13 +204,14 @@
       line-height: 1.0;
     }
     .experience-section img {
-      width: 50px;
-      /*margin-top: 110px;*/
-      margin-left: 50px;
+      width: 100px;
+      margin-top: 10px;
+      margin-left: 15px;
     }
     .experience-text {
       position: absolute;
       color: black;
+      margin-left: 15px;
       font-size: 16px;
       font-family: "Orbitron", sans-serif;
     }
