Main Page Part 2

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p>- Intégration/R&D d'algorithmes Radar</p>
     <p>- Développement personnalisé d'outils logiciels: Dépouillement, automatisation...</p>
     <p>- Expérience professionnelle internationale de plus de 25 ans</p>
-    <p>- Aide pour le développement de tout type d'applications</p>
+    <p>- Support pour le développement de tout type d'applications</p>
   </div>
   </section>
   
@@ -135,7 +135,7 @@
       width: 180px;
       height: 140px;
 
-      background-image: url("Portrait/Moi_et_Bure.jpg");
+      background-image: url("Portrait/Moi_et_Bure_et_Avion.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
