Pages Perso et ALPAZUR Solutions Part 1

--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
   <section class="presentation-section">
   
   <div class="presentation-text1"> 
-    <p>Micro-entreprise: ALP'AZUR Solutions</p>
+    <p>Micro-entreprise:
+        <a href="Alp_Azur_Solutions/Presentation.html">ALP'AZUR Solutions</a>
+    </p>
   </div>
   <div class="presentation-text2">
-    <span class="consultant">Consultant: René Weisbuch</span>
+    <span class="consultant">
+        Consultant:
+        <a href="Perso/Presentation.html">
+            René Weisbuch
+        </a>
+     </span>
     <img src="Logo/ENSICA.jpg" alt="ENSICA">
   </div>
   <div class="presentation-text3">
@@ -54,7 +61,7 @@
     <p>- Intégration/R&D d'algorithmes Radar</p>
     <p>- Développement personnalisé d'outils logiciels: Dépouillement, automatisation...</p>
     <p>- Expérience professionnelle internationale de plus de 25 ans</p>
-    <p>- Support pour le développement de tout type d'applications</p>
+    <p>- Support pour le développement d'applications</p>
   </div>
   </section>
   
