Changing Web Site Structure. Creation of AAS_SEA Part 1

--- a/AAS_SEA/AAS_SEA_En/AAS_SEA_En.html
+++ b/AAS_SEA/AAS_SEA_En/AAS_SEA_En.html
@@ -33,7 +33,7 @@
             René Weisbuch
         </a>
      </span>
-    <img src="Logo/ENSICA.jpg" alt="ENSICA">
+    <img src="../Logo/ENSICA.jpg" alt="ENSICA">
   </div>
   <div class="presentation-text3">
     <p>Diplôme: ENSI Constructions Aéronautiques</p>
@@ -49,9 +49,9 @@
   
   <section class="experience-section">
   <div class="experience-text">
-    <img src="Images/Systemes_embarques.png" alt="Systemes Embarques">
-    <img src="Images/Technologie_radar.png" alt="Technologie Radar">
-    <img src="Images/Outils_de_developpement.png" alt="Outils de Developpement">
+    <img src="../Images/Systemes_embarques.png" alt="Systemes Embarques">
+    <img src="../Images/Technologie_radar.png" alt="Technologie Radar">
+    <img src="../Images/Outils_de_developpement.png" alt="Outils de Developpement">
   </div>
   </section>
   
@@ -71,7 +71,7 @@
       margin: 0;
       position: relative; /* référence pour le positionnement */
       height: 100vh;
-      background-image: url("Fond_d_ecran/Fond_ciel.jpg");
+      background-image: url("../Fond_d_ecran/Fond_ciel.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -84,7 +84,7 @@
       width: 695px;
       height: 440px;
 
-      background-image: url("Fond_d_ecran/Fond_1.png");
+      background-image: url("../Fond_d_ecran/Fond_1.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -99,7 +99,7 @@
       width: 300px;
       height: 97px;
 
-      background-image: url("Logo/Logo_simple_1.png");
+      background-image: url("../Logo/Logo_simple_1.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -143,7 +143,7 @@
       width: 180px;
       height: 140px;
 
-      background-image: url("Portrait/Moi_et_Bure_et_Avion.png");
+      background-image: url("../Portrait/Moi_et_Bure_et_Avion.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -230,7 +230,7 @@
       width: 280px;
       height: 265px;
 
-      /*background-image: url("Fond_d_ecran/Fond_bleu.png");
+      /*background-image: url("../Fond_d_ecran/Fond_bleu.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;*/
