--- a/AAS_SEA/AAS_SEA_En/Motivation/Motivation.html
+++ b/AAS_SEA/AAS_SEA_En/Motivation/Motivation.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <section class="titre">
-  <div class="texte_titre">Micro-Entreprise</div>
+  <div class="texte_titre">Pourquoi choisir ALP'AZUR Solutions?</div>
   </section>
   
   <section class="logo-section"></section>
@@ -19,22 +19,18 @@
   <div class="footer_text">© 2026 – ALP'AZUR Solutions - Tous droits réservés</div>
   </section>
   
-  <section class="domaine">
-    <p class="domaine-titre">Domaines d'activité:</p>
-    <p class="domaine-texte">- Prestation de services dans l'informatique et l'aéronautique</p>
-    <p class="domaine-texte">- Support informatique et scientifique pour les particuliers et entreprises</p>
-    <p class="domaine-texte">- Développement et maintenance d'outils logiciel</p>
-  </section>
   
-  <section class="Presentation">
-    <p>Nom de l'entreprise: ALP'AZUR Solutions</p>
-    <p>Statut: Micro-entreprise (Entrepreneur individuel)</p>
-    <p>Fiscalement rattachée à la France</p>
-    <p>Numéro de Siren: 999494883</p>
-    <p>Adresse: 25A Boulevard Bellevue 05000 Gap France</p>
-    <p>Numéro de téléphone: +33(0)6 32 88 33 78</p>
-    <p>Courriel: weisbuchr@gmail.com</p>
-    <p>Date de création: 08 Janvier 2026</p>
+  <section class="Motivation">
+    <p>Le monde se développe vite, l'informatique et ce qui y est associé aussi...</p>
+    <p>En effet les outils logiciels sont de plus en plus perfectionnés, les Intelligences Artificielles révolutionnent la façon d'aborder et d'utiliser l'informatique.
+       Maintenant, avec quelques clics, on a accès au monde entier de la technologie.
+       Fin du développeur, physicien, mathématicien?</p>
+    <p>Tout en profitant des immenses progrès de l'informatique, 
+       il y aura toujours la nécessité d'une expertise, de savoir quelles solutions appliquer, de contrôler et de garantir la fiabilité.</p>
+    <p>ALP'AZUR Solutions offre la possibilité de soutien dans des systèmes embarqués proches du matériel, dans des logiciels implémentant des
+       algorithmes basés sur modèle et dans l'intégration des outils modernes dans le processus de développement.</p>
+    <p>L'entreprise se base sur son expérience pour être opérationnelle sur une grande diversité de projets et d'environnements, en France ou
+       à l'étranger.</p>
   </section>
   
   <style>
@@ -42,29 +38,18 @@
       margin: 0;
       position: relative; /* référence pour le positionnement */
       height: 100vh;
-      background-image: url("../Fond_d_ecran/Fond_ciel.jpg");
+      background-image: url("../../Fond_d_ecran/Fond_ciel.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
     }
-    .Presentation {
-      font-size: 24px;
-    }
-    .domaine {
+    .Motivation {
       font-size: 24px;
       position: absolute;
-      left: 550px;   /* x */
-      top: 180px;    /* y */
-      width: 500px;
-      height: 300px;
-      border: 2px solid #000
-    }
-    .domaine-titre{
-        font-weight: bold;
-        text-align: center;
-    }
-    .domaine-texte{
-        text-indent: 30px;
+      left: 50px;   /* x */
+      top: 100px;    /* y */
+      width: 1000px;
+      height: 400px;
     }
     .logo-section {
       position: absolute;
@@ -73,7 +58,7 @@
       width: 300px;
       height: 97px;
 
-      background-image: url("../Logo/Logo_simple_1.png");
+      background-image: url("../../Logo/Logo_simple_1.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -87,7 +72,7 @@
     }
     .texte_titre {
       position: absolute;
-      left: 550px;  /* x */
+      left: 410px;  /* x */
       top: 30px;   /* y */
       color: black;
       font-size: 32px;
