--- a/AAS_SEA/AAS_SEA_En/Perso/Experience.html
+++ b/AAS_SEA/AAS_SEA_En/Perso/Experience.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <section class="titre">
-  <div class="texte_titre">Qui suis-je ?</div>
+  <div class="texte_titre">Expérience professionnelle</div>
   </section>
   
   <section class="logo-section"></section>
@@ -20,26 +20,24 @@
   </section>
   
   <section class="cursus">
-    <p>Formation:</p>
-    <p>- Après avoir été à l'école et au collège de 1971 à 1984 à Grenoble, fin d'étude secondaires à Digne-les-Bains(04) France au Lycée A. David Neel</p>
-    <p>- Trois ans d'école préparatoire au Lycée Poincaré à Nancy (54) France</p>
-    <p>- Etudes supérieures à l'ENSICA Toulouse (31) France</p>
-    <p><span>
-        26 ans d'
-        <a href="Experience.html">Experience professionnelle</a>
-       </span>
+    <p><img src="Logos/MBDA.png" alt="MBDA">
+    <img src="Logos/SAFRAN.png" alt="SAFRAN">
+    <img src="Logos/Hensoldt.png" alt="Hensoldt">
+    <img src="Logos/Diehl.jpg" alt="Diehl"></p>
+    <p><a href="CVs/R_Weisbuch_CV_2026_Long_Version_Fr.pdf" download>
+        Télécharger le CV détaillé
+       </a>
+    </p>
+    <p><a href="CVs/R_Weisbuch_CV_2026_Short_Version_Fr.pdf" download>
+        Télécharger le CV synthétique
+       </a>
     </p>
   </section>
   
   <section class="Presentation">
-    <p>Nom: Weisbuch René</p>
-    <p>Date de naissance: 13 Février 1971 (54 ans)</p>
-    <p>Lieu de naissance: Grenoble (38) Isère France</p>
-    <p>Lieu de résidence: Gap (05) France</p>
-    <p>Détenteur du permis de conduire (B)</p>
-    <p>Diplômes:</p>
-    <p>- Baccalauréat Filière scientifique (C)</p>
-    <p>- Ingénieur de l'ENSICA Toulouse France</p>
+    <p>Après le diplôme, orientation vers l'informatique industrielle liée à l'aéronautique. Activités dans de grandes entreprises françaises comme MBDA et SAFRAN.</p>
+    <p>Expérience Internationale: 16 ans d'activité à Ulm (Allemagne) à Hensoldt Sensors GmbH et Diehl Aerospace.</p>
+    <p>Points forts: Technologie Radar, Calculateur de guidage missiles, Simulations, dans le domaine de la défense ou dans les industries civiles.</p>
   </section>
   
   <style>
@@ -47,13 +45,18 @@
       margin: 0;
       position: relative; /* référence pour le positionnement */
       height: 100vh;
-      background-image: url("../Fond_d_ecran/Fond_ciel.jpg");
+      background-image: url("../../Fond_d_ecran/Fond_ciel.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
     }
     .Presentation {
       font-size: 24px;
+      position: absolute;
+      left: 10px;   /* x */
+      top: 110px;    /* y */
+      width: 500px;
+      height: 400px;
     }
     .cursus {
       font-size: 24px;
@@ -70,7 +73,7 @@
       width: 300px;
       height: 97px;
 
-      background-image: url("../Logo/Logo_simple_1.png");
+      background-image: url("../../Logo/Logo_simple_1.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -84,7 +87,7 @@
     }
     .texte_titre {
       position: absolute;
-      left: 550px;  /* x */
+      left: 450px;  /* x */
       top: 30px;   /* y */
       color: black;
       font-size: 32px;
