--- a/AAS_SEA/AAS_SEA_Fr/Perso/Experience.html
+++ b/AAS_SEA/AAS_SEA_Fr/Perso/Experience.html
@@ -45,7 +45,7 @@
       margin: 0;
       position: relative; /* référence pour le positionnement */
       height: 100vh;
-      background-image: url("../Fond_d_ecran/Fond_ciel.jpg");
+      background-image: url("../../Fond_d_ecran/Fond_ciel.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -73,7 +73,7 @@
       width: 300px;
       height: 97px;
 
-      background-image: url("../Logo/Logo_simple_1.png");
+      background-image: url("../../Logo/Logo_simple_1.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
