--- a/AAS_SEA/AAS_SEA_Fr/index.html
+++ b/AAS_SEA/AAS_SEA_Fr/index.html
@@ -157,6 +157,7 @@
       width: 180px;
       height: 140px;
       margin: 20px auto;
+      border: 2px solid black;
 
       background-image: url("../Portrait/Moi_et_Bure_et_Avion.png");
       background-size: cover;
@@ -224,7 +225,7 @@
       }
 
       .texte_titre {
-        margin-left: 250px;
+        margin-left: 260px;
         font-size: 32px;
       }
 
@@ -255,7 +256,7 @@
 
       .presentation-section {
         position: absolute;
-        top: 130px;
+        top: 120px;
         left: 230px;
         width: 400px;
         text-align: left;
