--- a/AAS_SEA/AAS_SEA_Fr/index.html
+++ b/AAS_SEA/AAS_SEA_Fr/index.html
@@ -50,7 +50,7 @@
   
   <section class="experience-section">
   <div class="experience-text">
-    <img src="../Images/Systemes_embarques.png" alt="Systemes Embarques">
+    <a href="Specialites/Systemes_Embarques_1.html"><img src="../Images/Systemes_embarques.png" alt="Systemes Embarques 1"></a>
     <img src="../Images/Technologie_radar.png" alt="Technologie Radar">
     <img src="../Images/Outils_de_developpement.png" alt="Outils de Developpement">
   </div>
