Specialites Outils Logiciel Part 1

--- a/AAS_SEA/AAS_SEA_Fr/Specialites/Outils_de_Developpement_1.html
+++ b/AAS_SEA/AAS_SEA_Fr/Specialites/Outils_de_Developpement_1.html
@@ -10,19 +10,16 @@
 </head>
 <body>
   <section class="titre">
-  <div class="texte_titre">Expériences dans les Technologies Radar</div>
+  <div class="texte_titre">Expériences dans le développement d'outils logiciel</div>
   </section>
   
   <section class="logo-section"></section>
   
-  <section class="technologie-radar">
-    <p>Développement d'outils logiciel d'aide à la mise au point de systèmes radar. (MATLAB/PYTHON)</p>
-    <p>Implémentation des tests d'algorithmes et du modèle d'un mode air-air de radar aéroporté.</p>
-    <p>Définition et exécution de tests modulaires, d'intégration et end-to-end d'algorithmes radar.</p>
-    <p>Travaux d'investigation:</p>
-    <p>- Détermination de l'élévation d'une cible par un radar sol (fan-beam) double faisceau.</p>
-    <p>- Evaluation d'un traitement du signal radar avec grand nombre de filtres.</p>
-    <p>- Optimisation du traitement du signal provenant d'un missile par le radar de l'Eurofighter.</p>
+  <section class="outils-developpement">
+    <p>Déserialisation de flux de données circulant entre différents systèmes. Mil-Bus (1553), AFDX, Serial Link, Can Bus.</p>
+    <p>Outils Excel (Macro) d'aide à l'analyse de données radar ou autres.</p>
+    <p>Etude avec MATLAB Simulink d'un système asservi: Régulation de pression cabine pour avions de ligne.</p>
+    <p>Automatisation de tests modulaires et/ou d'intégration. Google Test, Py Test.</p>
   </section>
   
   <section class="footer-section">
@@ -74,12 +71,12 @@
       background-repeat: no-repeat;
     }
     /* -------- Systemes Embarques ------ */
-    .technologie-radar {
+    .outils-developpement {
         font-size: 24px;
         margin-left: 20px;
     }
     
-    .tr-images {
+    .od-images {
       width: 100%;
       display: flex;
       justify-content: center;
@@ -108,7 +105,7 @@
       }
 
       .texte_titre {
-        margin-left: 160px;
+        margin-left: 200px;
         font-size: 32px;
       }
 
@@ -120,7 +117,7 @@
         height: 100px;
         margin:0;
       }
-      .technologie-radar {
+      .outils-developpement {
         position: absolute;
         left: 50px;   /* x */
         top: 100px;    /* y */
