Specialites Outils Logiciel Part 2

--- a/AAS_SEA/AAS_SEA_Fr/Specialites/Outils_de_Developpement_1.html
+++ b/AAS_SEA/AAS_SEA_Fr/Specialites/Outils_de_Developpement_1.html
@@ -20,6 +20,7 @@
     <p>Outils Excel (Macro) d'aide à l'analyse de données radar ou autres.</p>
     <p>Etude avec MATLAB Simulink d'un système asservi: Régulation de pression cabine pour avions de ligne.</p>
     <p>Automatisation de tests modulaires et/ou d'intégration. Google Test, Py Test.</p>
+    <p>Pour le développement, maîtrise des langages: C/C++, Python, MATLAB, Macro Excel (Basic).</p>
   </section>
   
   <section class="footer-section">
