Changes after review Part 1

--- a/AAS_SEA/AAS_SEA_Fr/Perso/Presentation.html
+++ b/AAS_SEA/AAS_SEA_Fr/Perso/Presentation.html
@@ -27,13 +27,18 @@
   </section>
   
   <section class="cursus">
-    <div class="cursus-titre"><p>Formation:</p></div>
-    <p>- Après avoir été à l'école primaire et au collège de 1971 à 1984 à Grenoble, fin d'étude secondaires à Digne-les-Bains(04) France au Lycée A. David Neel</p>
-    <p>- Trois ans d'école préparatoire au Lycée Poincaré à Nancy (54) France</p>
-    <p>- Etudes supérieures à l'ENSICA Toulouse (31) France</p>
+    <div class="cursus-titre"><p>Curriculum Vitae:</p></div>
+    <p><a href="CVs/R_Weisbuch_CV_2026_Long_Version_Fr.pdf" download>
+        - Télécharger le CV détaillé
+       </a>
+    </p>
+    <p><a href="CVs/R_Weisbuch_CV_2026_Short_Version_Fr.pdf" download>
+        - Télécharger le CV synthétique
+       </a>
+    </p>
     <p><span>
         26 ans d'
-        <a href="Experience.html">Experience professionnelle</a>
+        <a href="Experience.html">Expérience professionnelle</a>
        </span>
     </p>
   </section>
