--- a/AAS_SEA/AAS_SEA_Fr/index.html
+++ b/AAS_SEA/AAS_SEA_Fr/index.html
@@ -34,10 +34,9 @@
             René Weisbuch
         </a>
      </span>
-    <img src="../Logo/ENSICA.jpg" alt="ENSICA">
   </div>
   <div class="presentation-text3">
-    <p>Diplôme: ENSI Constructions Aéronautiques</p>
+    <p>Ingénieur logiciel et système</p>
   </div>
   </section>
   
@@ -50,9 +49,9 @@
   
   <section class="experience-section">
   <div class="experience-text">
-    <a href="Specialites/Systemes_Embarques_1.html"><img src="../Images/Systemes_embarques.png" alt="Systemes Embarques 1"></a>
-    <a href="Specialites/Technologie_Radar_1.html"><img src="../Images/Technologie_radar.png" alt="Technologie Radar"></a>
-    <a href="Specialites/Outils_de_Developpement_1.html"><img src="../Images/Outils_de_developpement.png" alt="Outils de Developpement"></a>
+    <a href="Specialites/Systemes_Embarques_1.html">Systèmes Embarqués</a>
+    <a href="Specialites/Technologie_Radar_1.html">Technologie Radar</a>
+    <a href="Specialites/Outils_de_Developpement_1.html">Outils de Développement</a>
   </div>
   </section>
   
@@ -277,7 +276,7 @@
       .experience-section {
         position: absolute;
         top: 350px;
-        left: 60px;
+        left: 20px;
         justify-content: flex-start;
       }
       .experience-text {
