Changes after review Part 2

--- a/AAS_SEA/AAS_SEA_Fr/Specialites/Outils_de_Developpement_1.html
+++ b/AAS_SEA/AAS_SEA_Fr/Specialites/Outils_de_Developpement_1.html
@@ -41,7 +41,7 @@
       width: 100%;
       font-family: Arial, sans-serif;
 
-      background-image: url("../../Fond_d_ecran/Fond_ciel.jpg");
+      background-image: url("../../Fond_d_ecran/gradient_blue_white.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
