Changes after review Part 4

--- a/AAS_SEA/AAS_SEA_Fr/Perso/Experience.html
+++ b/AAS_SEA/AAS_SEA_Fr/Perso/Experience.html
@@ -23,8 +23,8 @@
   
   <section class="cursus">
     <p><img src="Logos/MBDA.png" alt="MBDA">
-    <img src="Logos/SAFRAN.png" alt="SAFRAN">
-    <img src="Logos/Hensoldt.png" alt="Hensoldt">
+    <img src="Logos/SAFRAN.png" alt="SAFRAN"></p>
+    <p><img src="Logos/Hensoldt.png" alt="Hensoldt">
     <img src="Logos/Diehl.jpg" alt="Diehl"></p>
   </section>
   
@@ -126,26 +126,26 @@
       }
       .presentation {
         position: absolute;
-        left: 20px;   /* x */
-        top: 120px;    /* y */
-        width: 500px;
-        height: 300px;
+        left: 2%;   /* x */
+        top: 25%;    /* y */
+        width: 50%;
+        height: 30%;
       }
       
       .cursus {
         position: absolute;
-        left: 650px;   /* x */
-        top: 100px;    /* y */
-        width: 500px;
-        height: 200px;
+        left: 60%;   /* x */
+        top: 20%;    /* y */
+        width: 40%;
+        height: 20%;
       }
       
       .footer-section {
         position: absolute;
-        left: 10px;   /* x */
-        top: 550px;    /* y */
-        width: 1200px;
-        height: 40px;
+        left: 1%;   /* x */
+        top: 90%;    /* y */
+        width: 100%;
+        height: 4%;
         display: flex;
         justify-content: center; /* centrage horizontal */
         align-items: center;     /* centrage vertical */
