--- a/AAS_SEA/AAS_SEA_Fr/Specialites/Outils_de_Developpement_1.html
+++ b/AAS_SEA/AAS_SEA_Fr/Specialites/Outils_de_Developpement_1.html
@@ -120,18 +120,18 @@
       }
       .outils-developpement {
         position: absolute;
-        left: 50px;   /* x */
-        top: 100px;    /* y */
-        width: 1000px;
-        height: 400px;
+        left: 5%;   /* x */
+        top: 25%;    /* y */
+        width: 90%;
+        height: 40%;
       }
       
       .footer-section {
         position: absolute;
-        left: 10px;   /* x */
-        top: 550px;    /* y */
-        width: 1200px;
-        height: 40px;
+        left: 1%;   /* x */
+        top: 90%;    /* y */
+        width: 100%;
+        height: 4%;
         display: flex;
         justify-content: center; /* centrage horizontal */
         align-items: center;     /* centrage vertical */
