--- a/AAS_SEA/AAS_SEA_Fr/index.html
+++ b/AAS_SEA/AAS_SEA_Fr/index.html
@@ -14,6 +14,10 @@
   <div class="texte_titre">Consultant en informatique industrielle et aéronautique</div>
   </section>
   
+  <section class="language-section">
+  <a href="../AAS_SEA_En/index.html"><img src="../Logo/flag_en_48.png"></a>
+  </section>
+  
   <section class="footer-section">
   <div class="footer_text">© 2026 – ALP'AZUR Solutions - Tous droits réservés</div>
   </section>
@@ -125,6 +129,11 @@
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
+    }
+    
+    /* --------- Language --------- */
+    .language-section {
+        width: 50%
     }
 
     /* ---------- INTRO ---------- */
@@ -260,6 +269,14 @@
         width: 270px;
         height: 100px;
         margin:0;
+      }
+      
+      .language-section {
+        position: absolute;
+        top: 5%;
+        left: 95%;
+        width: 50%;
+        height: 42%;
       }
 
       .portrait-section {
