--- a/AAS_LOC/Alp_Azur_Solutions/Presentation.html
+++ b/AAS_LOC/Alp_Azur_Solutions/Presentation.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Industrial & Aerospace IT Consultant</title>
+  <title>Consultant Support en Sciences, Informatique & Allemand</title>
   <link href="styles.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,43 +10,43 @@
 </head>
 <body>
   <section class="titre">
-  <div class="texte_titre">Micro-Business</div>
+  <div class="texte_titre">Micro-Entreprise</div>
   </section>
   
   <section class="logo-section"></section>
   
   <section class="presentation">
-    <p>Company name: ALP'AZUR Solutions</p>
-    <p>Status: Micro-business (Sole proprietorship)</p>
-    <p>Tax registered in France</p>
-    <p>Siren number: 99949488300013</p>
-    <p>Address: 25A Boulevard Bellevue 05000 Gap France</p>
-    <p>Phone number: +33(0)6 32 88 33 78</p>
-    <p>Email: weisbuchr@gmail.com</p>
-    <p>Creation date: January 8, 2026</p>
+    <p>Nom de l'entreprise: ALP'AZUR Solutions</p>
+    <p>Statut: Micro-entreprise (Entrepreneur individuel)</p>
+    <p>Fiscalement rattachée à la France</p>
+    <p>Numéro de Siren: 99949488300013</p>
+    <p>Adresse: 25A Boulevard Bellevue 05000 Gap France</p>
+    <p>Numéro de téléphone: +33(0)6 32 88 33 78</p>
+    <p>Courriel: weisbuchr@gmail.com</p>
+    <p>Date de création: 08 Janvier 2026</p>
   </section>
   
   <section class="domaine">
-    <p class="domaine-titre">Areas of activity:</p>
+    <p class="domaine-titre">Domaines d'activité:</p>
     <p class="domaine-texte">
     <span>
-    <img src="../../Logo/pointing.png" alt="Pointing" class="pointing flip">
-        Service provision in IT and aerospace
+    <img src="../Logo/pointing.png" alt="Pointing" class="pointing flip">
+        Prestation de services pour l'Enseignement et la Formation
     </span></p>
     <p class="domaine-texte">
     <span>
-    <img src="../../Logo/pointing.png" alt="Pointing" class="pointing flip">
-        IT and scientific support for individuals and businesses
+    <img src="../Logo/pointing.png" alt="Pointing" class="pointing flip">
+        Prestation de services pour le Support informatique et scientifique (particuliers et entreprises)
     </span></p>
     <p class="domaine-texte">
     <span>
-    <img src="../../Logo/pointing.png" alt="Pointing" class="pointing flip">
-        Development and maintenance of software tools
+    <img src="../Logo/pointing.png" alt="Pointing" class="pointing flip">
+        Support dans les langues Anglais et Allemand
     </span></p>
   </section>
   
   <section class="footer-section">
-  <div class="footer_text">© 2026 – ALP'AZUR Solutions - All rights reserved</div>
+  <div class="footer_text">© 2026 – ALP'AZUR Solutions - Tous droits réservés</div>
   </section>
   
   <style>
@@ -63,7 +63,7 @@
       width: 100%;
       font-family: Arial, sans-serif;
 
-      background-image: url("../../Fond_d_ecran/gradient_blue_white.png");
+      background-image: url("../Fond_d_ecran/wallpaper_education.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -88,7 +88,7 @@
       height: 65px;
       margin: 20px auto;
 
-      background-image: url("../../Logo/Logo_simple_1.png");
+      background-image: url("../Logo/Logo_simple_1.png");
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -102,6 +102,9 @@
     /* --------- DOMAINE ---------- */
     .domaine {
         font-size: 24px;
+        background-image: url("../Fond_d_ecran/fond_peche_1920x1080.png");
+        background-size: cover;
+        background-position: center;
     }
     .domaine-titre{
         font-weight: bold;
@@ -158,9 +161,9 @@
       .domaine {
         position: absolute;
         left: 50%;   /* x */
-        top: 25%;    /* y */
+        top: 22%;    /* y */
         width: 45%;
-        height: 60%;
+        height: 65%;
         border: 2px solid #000
       }
       
@@ -171,8 +174,8 @@
         width: 100%;
         height: 4%;
         display: flex;
-        justify-content: center; /* horizontal centering */
-        align-items: center;     /* vertical centering */
+        justify-content: center; /* centrage horizontal */
+        align-items: center;     /* centrage vertical */
     }
     }
     
